--- a/hex.html
+++ b/hex.html
@@ -30,7 +30,7 @@
 		</main>
 		<!-- Footer -->
 		<footer class="footer">
-			<p>&copy; Color Flipper Built by <a href="#">Pa Amat Jow</a></p>
+			<p>&copy; Color Flipper Built by <a href="https://github.com/PaAmatJow">Pa Amat Jow</a></p>
 		</footer>
 		<!-- javascript -->
 		<script src="hex.js"></script>
